<?xml version="1.0"?>
<package>
  <name>rising_gazebo</name>
  <version>0.0.0</version>
  <description>The rising_gazebo package</description>

  <maintainer email="clagarde@robotnik.es">cris</maintainer>
  <maintainer email="rjulia@robotnik.es">raquel</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>rising_control</build_depend>
  <build_depend>rising_description</build_depend>
  <build_depend>xacro</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>rising_control</run_depend>
  <run_depend>rising_description</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend>gazebo_plugins</run_depend>

  <export>
 	  <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>

</package>
