<?xml version="1.0"?>
<package format="2">
  <name>rising_sim</name>
  <version>0.0.0</version>
  <description>The rising_sim package</description>

  <maintainer email="clagarde@robotnik.es">cris</maintainer>
  <maintainer email="rjulia@robotnik.es">raquel</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

    <metapackage/>

  </export>
  
</package>
