<?xml version="1.0"?>
<package format="2">
  <name>rising_sim</name>
  <version>0.0.1</version>
  <description>The rising_sim metapackage</description>

  <maintainer email="rjulia@robotnik.es">raquel</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rising_gazebo</exec_depend>
  <exec_depend>rising_sim_bringup</exec_depend>

  <export>
    <metapackage/>
  </export>
  
</package>
