<?xml version="1.0"?>
<package format="2">
  <name>rising_sim_bringup</name>
  <version>0.0.1</version>
  <description>The rising_sim_bringup package</description>

  <maintainer email="rjulia@robotnik.es">raquel</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rising_control</exec_depend>
  <exec_depend>rising_description</exec_depend>

</package>
